--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   validate-data:
+    env:
+      REMOTE_CONTROL_BOT_TOKEN: ${{ secrets.REMOTE_CONTROL_BOT_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
