--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
         run: |
           npm i
           npm test
-        working-directory: .
+        working-directory: ./discord-remote-control-bot
